figured out the height issue for the first button on mobile

--- a/styles.css
+++ b/styles.css
@@ -92,7 +92,7 @@ p{
 
 #hero-description{
   display: flex;
-  height: 280px;
+  /*height: 280px;*/
   flex-basis: 548px;
   display: flex;
   flex-direction: column;
@@ -355,28 +355,8 @@ p{
 
 }
 
-.btn2{
-  display: flex;
-  background-color: white;
-  cursor: pointer;
-  text-align: center;
-  border: 0;
-  border-radius: 4px;
-  line-height: 1;
-  justify-content: center;
-  padding: 1rem 3.5rem;
-  text-decoration: none;
-  width: 100%;
-  font-size: 1.75rem;
-  max-width: 300px;
-
-  -webkit-box-pack: center;
-  -moz-box-pack: center;
-  align-items: center;
-  -webkit-box-align: center;
-  transition: background-color .3s ease-in-out,transform .3s ease-in-out,-webkit-transform .3s ease-in-out;
-  width: 100%;
-
+.white-btn {
+  background-color: #fff;
 }
 
 .btn1:hover{
@@ -385,26 +365,31 @@ p{
   color: hsla(0,0%,100%,.9);
 }
 
+.white-btn:hover {
+  /*fill in more here! :) that background color isn't accurate, just a filler */
+  background-color: #f2f2f2;
+}
 
-.ab-white .ac-white{
+
+/*.ab-white .ac-white{
   color: #40596b;
   font-family: Signika,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica,Arial,sans-serif;
   font-weight: 600;
-}
+}*/
 
-.ab-white{
-  font-weight: 300;
-  color: #40596b;
-}
-
-.ac {
+/*.ac {
   font-weight:600;
-}
+}*/
 
 .ab{
   font-weight: 300;
   color:#e7eaec;
   font-family: Signika,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica,Arial,sans-serif;
+}
+
+.ab-white{
+  /*font-weight: 300;*/
+  color: #40596b;
 }
 
 .strong{
@@ -533,7 +518,7 @@ footer p{
 
 #hero-description{
   display: flex;
-  height: 280px;
+  /*height: 280px;*/
   flex-basis: 548px;
   display: flex;
   flex-direction: column;
@@ -644,6 +629,10 @@ footer p{
       margin: 1.75rem 1.75rem;
     }
 
+    .btn1 {
+      padding-left: 0.25rem;
+      padding-right: 0.25rem;
+    }
 
     #img-div{
       margin: 0;
